--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="conteiner">
            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
            <input type="checkbox" id="menu" class="cointainer__botão">
-            <img src="img/Logo.svg" alt="Logo" class="container__imagem">
+            <img src="img/Logo.svg" alt="Logo da alurabooks" class="container__imagem">
         </div>
         <div class="conteiner">
         <a href="#"><img src="img/Favoritos.svg" alt="Favoritos" class="container__imagem"></a>
