--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header class="cabeçalho">
         <div class="conteiner">
-           <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-           <input type="checkbox" id="menu" class="cointainer__botão">
+            <input type="checkbox" id="menu" class="cointainer__botão">
+            <label for=”menu”>
+                   <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+            </label>
             <img src="img/Logo.svg" alt="Logo da alurabooks" class="container__imagem">
         </div>
         <div class="conteiner">
